Criação de tela de colaboradores e ajuste de erros de código!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <button mat-button [routerLink]="'/estabelecimentos'" routerLinkActive="active-route">Estabelecimentos</button>
     <button mat-button [routerLink]="'/profissionais'" routerLinkActive="active-route">Profissionais</button>
     <button mat-button [routerLink]="'/personagens'" routerLinkActive="active-route">Personagens</button>
+    <button mat-button [routerLink]="'/colaborador'" routerLinkActive="active-route">Colaboradores</button>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
